--- a/Serendipity/WebContent/search.xhtml
+++ b/Serendipity/WebContent/search.xhtml
@@ -108,7 +108,9 @@
 		</h:panelGroup>
 	</h:form>
 	
-	<h:panelGroup style="position: absolute;width: 100%; height: 40px; bottom:0; background-color: #dddddd; margin-top: -3em;"></h:panelGroup>
+	<h:panelGroup style="position: absolute;width: 100%; height: 40px; bottom:0; background-color: #dddddd; margin-top: -3em; text-align: center;">
+		Copyright © 2019
+	</h:panelGroup>
 </h:panelGroup>
 
 
