--- a/Serendipity/WebContent/search.xhtml
+++ b/Serendipity/WebContent/search.xhtml
@@ -109,7 +109,7 @@
 	</h:form>
 	
 	<h:panelGroup style="position: absolute;width: 100%; height: 40px; bottom:0; background-color: #dddddd; margin-top: -3em; text-align: center;">
-		Copyright © 2019
+		<a href="https://doi.org/10.6084/m9.figshare.7851137.v1">SOL Tool</a> Copyright © 2019 | <a href="about.xhtml">About</a>
 	</h:panelGroup>
 </h:panelGroup>
 
