--- a/Serendipity/WebContent/search.xhtml
+++ b/Serendipity/WebContent/search.xhtml
@@ -5,7 +5,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
-      >
+      style="height: 100%;">
 <h:head>
   <title>Serendipitous search application</title>
   
@@ -14,7 +14,10 @@
   <h:outputScript library="js" name="bootstrap.min.js"/>
 </h:head>
 
-<h:body>
+<h:body style="position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+  min-height: 100%;">
 
 <h:panelGroup styleClass="container">
 
@@ -108,7 +111,7 @@
 		</h:panelGroup>
 	</h:form>
 	
-	<h:panelGroup style="position: absolute;width: 100%; height: 40px; bottom:0; background-color: #dddddd; margin-top: -3em; text-align: center;">
+	<h:panelGroup style="position: absolute; left: 0px; right: 0px; bottom:0; background-color: #dddddd; padding: 1em; text-align: center;">
 		<a href="https://doi.org/10.6084/m9.figshare.7851137.v1">SOL Tool</a> Copyright © 2019 | <a href="about.xhtml">About</a>
 	</h:panelGroup>
 </h:panelGroup>
